--- a/TimeScheduleMobileGroup11/app/src/main/res/values/strings.xml
+++ b/TimeScheduleMobileGroup11/app/src/main/res/values/strings.xml
@@ -42,5 +42,10 @@
         libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
         vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
     </string>
+    <string name="studentCode">Mã số sinh viên/ Mã giảng viên</string>
+    <string name="password">Mật khẩu</string>
+    <string name="forgotPassword">Quên mật khẩu?</string>
+    <string name="login">Đăng nhập</string>
+    <string name="register">Đăng ký</string>
 
 </resources>
