Done fix congfict

--- a/TimeScheduleMobileGroup11/app/src/main/res/values/strings.xml
+++ b/TimeScheduleMobileGroup11/app/src/main/res/values/strings.xml
@@ -71,5 +71,5 @@
     <string name="numberOfLession">Số buổi học:</string>
     <string name="TeacherCode">Mã giảng viên:</string>
     <string name="teacherName">Tên giảng viên:</string>
-
+    <string name="eventTitle">Sự kiện / Hoạt động</string>
 </resources>
